# imctools

./: .editorconfig  .gitignore  .readthedocs.yml  .travis.yml  AUTHORS.md  CHANGELOG.html  CHANGELOG.md  CONTRIBUTING.html  CONTRIBUTING.md  LICENSE  LICENSE.html  Makefile  README.md  README.rst  api_reference.html  conftest.py  genindex.html  imctools.cli.html  imctools.converters.html  imctools.data.html  imctools.io.html  index.html  index.md  objects.inv  py-modindex.html  pyproject.toml  pyrightconfig.json  quickstart.html  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py
.github/: ISSUE_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  test_and_deploy.yml
_sources/: api_reference.rst.txt  imctools.cli.rst.txt  imctools.converters.rst.txt  imctools.data.rst.txt  index.md.txt
_sources/stubs/: imctools.cli.rst.txt
docs/: cli.html  index.html
docs/converters/: exportacquisitioncsv.html  index.html  mcdfolder2imcfolder.html  ome2analysis.html  ome2histocat.html  probability2uncertainty.html  v1tov2.html
docs/data/: acquisition.html  acquisitiondata.html  channel.html  index.html  panorama.html  session.html  slide.html
docs/imctools/: cli.html  imctools.html  index.html
docs/io/: errors.html  index.html  utils.html
docs/io/imc/: imcparser.html  imcwriter.html  index.html
docs/io/mcd/: constants.html  index.html  mcdparser.html  mcdxmlparser.html
docs/io/ometiff/: index.html  ometiffparser.html
docs/io/txt/: index.html  txtparser.html
docs/source/: api_reference.rst  conf.py  imctools.imagej.rst  imctools.io.rst  index.rst  quickstart.md
docs/source/_templates/autosummary/: class.rst  module.rst
docs/source/stubs/: imctools.converters.rst  imctools.data.rst  imctools.io.rst
examples/: 20161025_tunningtapes.ipynb  20161025_tunningtapes.py  old_example_preprocessing_pipeline.ipynb
imctools/: __init__.py  cli.py  core.py  exceptions.py  library.py  librarybase.py  libraryxml.py  load_multichannel_ome.py  open_imc_file.py  open_mcd.py
imctools/converters/: __init__.py  exportacquisitioncsv.py  mcdfolder2imcfolder.py  ome2analysis.py  ome2histocat.py  probability2uncertainty.py  v1tov2.py
imctools/core/: acquisition.py  channel.py  overview_image.py  progress_image.py  session.py  slide.py
imctools/data/: __init__.py  ablation_image.py  acquisition.py  acquisitiondata.py  channel.py  overview_image.py  panorama.py  progress_image.py  session.py  slide.py
imctools/gc3pie/: convertallsubfolders.py  examplescript.py  imc2tiff.py
imctools/imagej/: library.py  load_multichannel_ome.py
imctools/io/: __init__.py  abstractparser.py  abstractparserbase.py  errors.py  image_stack.py  imc_acquisition.py  imcacquisition.py  imcacquisitionbase.py  imcacquisitionomebase.py  imcacquisitionometiff.py  imcfolderwriter.py  imctextacquisitionbase.py  mcd_constants.py  mcd_parser.py  mcd_xml.py  mcd_xml_parser.py  mcdparser.py  mcdparserbase.py  mcdparsercpp.py  mcdxmlparser.py  omeparserbase.py  ometiffparser.py  parserbase.py  sttarr_parser.py  tiffwriter.py  txt_parser.py  txtparser.py  txtparserbase.py  utils.py
imctools/io/imc/: imcparser.py  imcwriter.py
imctools/io/mcd/: constants.py  mcdparser.py  mcdxmlparser.py
imctools/io/ome/: ometiffparser.py
imctools/io/ometiff/: ometiffparser.py
imctools/io/txt/: txtparser.py
imctools/scripts/: #imc2tiff.py#  __init__.py  convertfolder2imcfolder.py  cropobjects.py  croprandomsection.py  cropsection.py  exportacquisitioncsv.py  frontend.py  generatedistancetospheres.py  imc2tiff.py  mcd2tiff.py  ome2micat.py  ometiff2analysis.py  probablity2uncertainty.py  resizeimage.py  scripts.py
imctools/scripts/pipeline/: configuration.py  steps.py
notebooks/: 20161025_tunningtapes.ipynb  20161025_tunningtapes.py  example_preprocessing_pipeline.ipynb  example_preprocessing_pipeline.py  pipline.ipynb
stubs/: imctools.cli.html  imctools.converters.html  imctools.data.html  imctools.io.html
tests/: __init__.py  context.py  cropimagestests.py  croprandomsectiontest.py  generate_testcase.py  helpers.py  resizeimagetest.py  test_abstractparser.py  test_basic.py  test_imcacquisitionbase.py  test_imcparser.py  test_imctools.py  test_io.py  test_mcdparser.py  test_mcdparserbase.py  test_mcdparsercpp.py  test_mcdxmlparser.py  test_ometiffparser.py  test_session.py  test_tiffwriter.py  test_txtparser.py  test_utils.py
tests/testdata/: .gitignore  20170829_20170805_p60-63_slide6_ac1_vz.mcd.pickle
