[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "imctools"
version = "2.1.1"
description = "Tools to handle Fluidigm IMC data"
license = "MIT"
authors = ["Vito Zanotelli <vito.zanotelli@uzh.ch>", "Anton Rau <anton.rau@uzh.ch>"]
homepage = "https://github.com/BodenmillerGroup/imctools"
repository = "https://github.com/BodenmillerGroup/imctools"
documentation = "https://bodenmillergroup.github.io/imctools"
keywords = ["MCD", "OME-TIFF", "IMC", "CellProfiler"]
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.7",
]
include = ["AUTHORS.md", "CONTRIBUTING.md", "CHANGELOG.md", "LICENSE", "README.md"]
exclude = ["tests", "docs"]

[tool.poetry.dependencies]
python = ">=3.7"
imagecodecs = "^2020.5.30"
packaging = "*"
pandas = "^1.0"
typing_extensions = ">=3.7.4.2"
xmltodict = ">=0.12.0"
xtiff = ">=0.6.4"

[tool.poetry.dev-dependencies]
autoflake = "^1.4"
black = "^19.10b0"
bump2version = "^1.0.1"
flake8 = "^3.8.4"
isort = "*"
mypy = "*"
pdoc3 = "*"
pylint = "^2.6.0"
pytest = "^6.2.1"
pytest-cov = "*"
vulture = "^2.3"

[tool.poetry.scripts]
imctools = 'imctools.cli:main'

[tool.black]
line-length = 120
target-version = ["py37"]
