[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "imctools"
version = "2.1.7"
description = "Tools to handle Fluidigm IMC data"
license = "MIT"
authors = ["Vito Zanotelli <vito.zanotelli@uzh.ch>", "Anton Rau <anton.rau@uzh.ch>"]
homepage = "https://github.com/BodenmillerGroup/imctools"
repository = "https://github.com/BodenmillerGroup/imctools"
documentation = "https://bodenmillergroup.github.io/imctools"
keywords = ["MCD", "OME-TIFF", "IMC", "CellProfiler"]
readme = "README.md"
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
include = ["AUTHORS.md", "CONTRIBUTING.md", "CHANGELOG.md", "LICENSE", "README.md"]
exclude = ["tests", "docs", "**/__pycache__"]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
imagecodecs = "*"
packaging = "*"
pandas = "*"
typing_extensions = ">=3.7.4.3"
xmltodict = ">=0.12.0"
xtiff = ">=0.7.4"

[tool.poetry.dev-dependencies]
autoflake = "*"
black = "*"
flake8 = "*"
isort = "*"
mypy = "*"
myst-parser = "*"
pylint = "*"
pytest = "*"
pytest-cov = "*"
sphinx = "3.*"
sphinx-autodoc-typehints = "*"
sphinx_paramlinks = "*"
sphinx_rtd_theme = "*"
vulture = "*"

[tool.poetry.scripts]
imctools = 'imctools.cli:main'

[tool.black]
line-length = 120
target-version = ["py37"]
