[bumpversion]
current_version = 2.1.2
commit = False
tag = False

[metadata]
name = imctools
description = Tools to handle IMC data
author = Vito Zanotelli, Anton Rau
author-email = vito.zanotelli@uzh.ch, anton.rau@uzh.ch
long_description = file: README.md
keywords = IMC, Fluidigm
license = MIT
classifiers =
	Operating System :: OS Independent
	Programming Language :: Python
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.7

[bumpversion:file:pyproject.toml]
search = version = "{current_version}"
replace = version = "{new_version}"

[bumpversion:file:imctools/__init__.py]
search = __version__ = '{current_version}'
replace = __version__ = '{new_version}'

[flake8]
max-line-length = 120
exclude =
	.git,
	venv,
	__pycache__,
	.pytest_cache,
	docs,
	build,
	dist

[tool:pytest]
testpaths = tests

[pylint]
output-format = colorized

[mypy]
python_version = 3.7
platform = linux
ignore_missing_imports = True
